# dim_CNN

./: CMakeLists.txt  main.cpp
